# coxswain

./: .gitignore  CLAUDE.md  Cargo.toml  DEVSETUP.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: 69-probe-rs.rules  Dockerfile  devcontainer-lock.json  devcontainer.json  postCreate.sh
.github/workflows/: ci.yml
contrib/: coxswain.service
crates/coxswain-allocation/: Cargo.toml
crates/coxswain-allocation/src/: lib.rs  model.rs
crates/coxswain-contract/: Cargo.toml
crates/coxswain-contract/src/: actuator.rs  bounded.rs  config.rs  conn.rs  effector.rs  geo.rs  guidance.rs  health.rs  lib.rs  measurement.rs  power.rs  state.rs  time.rs
crates/coxswain-contract/tests/: serde_roundtrip.rs
crates/coxswain-crsf/: Cargo.toml
crates/coxswain-crsf/src/: accumulator.rs  crc.rs  error.rs  frame.rs  lib.rs
crates/coxswain-crsf/tests/: fuzz.rs  golden.rs  incremental.rs  rejection.rs
crates/coxswain-crsf/tests/common/: mod.rs
crates/coxswain-cyphal/: Cargo.toml
crates/coxswain-cyphal/src/: error.rs  frame.rs  id.rs  lib.rs
crates/coxswain-cyphal/tests/: fuzz.rs  golden.rs  rejection.rs
crates/coxswain-drivers/: Cargo.toml
crates/coxswain-drivers/src/: actuator_serial.rs  cyphal_actuator.rs  gnss0183.rs  lib.rs  output.rs  rc.rs
crates/coxswain-estimator/: Cargo.toml
crates/coxswain-estimator/src/: ekf.rs  lib.rs
crates/coxswain-estimator/tests/: replay_cases.rs
crates/coxswain-estimator/tests/harness/: mod.rs
crates/coxswain-guidance/: Cargo.toml
crates/coxswain-guidance/src/: lib.rs
crates/coxswain-guidance/tests/: closed_loop.rs
crates/coxswain-hosted/: Cargo.toml
crates/coxswain-hosted/src/: can.rs  lib.rs  main.rs  recorder.rs  sd_notify.rs  serial.rs  udp.rs
crates/coxswain-hosted/tests/: can_rig.rs  closed_loop.rs  cyphal_can_rig.rs  desk_rig.rs  fault_campaign.rs  integration_zenoh.rs  no_alloc.rs  udp_desk_rig.rs
crates/coxswain-keelson/: Cargo.toml  build.rs
crates/coxswain-keelson/protos/: README.md  coxswain_conn.proto
crates/coxswain-keelson/src/: claimant.rs  convert.rs  error.rs  keys.rs  lib.rs  proto.rs  vessel.rs
crates/coxswain-keelson/tests/: loopback.rs  n2k_publish.rs  publish_raw.rs
crates/coxswain-manifest/: Cargo.toml
crates/coxswain-manifest/src/: blob.rs  compile.rs  lib.rs  toml_model.rs  types.rs
crates/coxswain-manifest/tests/: cyphal_effector.rs  example.toml  fuzz.rs  golden.rs  rudderboat.rs  rudderboat.toml  seahorse.toml  test_key.seed
crates/coxswain-model/: Cargo.toml
crates/coxswain-model/src/: frame.rs  lib.rs
crates/coxswain-n2k/: Cargo.toml
crates/coxswain-n2k/src/: error.rs  fast_packet.rs  fields.rs  id.rs  lib.rs  message.rs
crates/coxswain-n2k/tests/: fast_packet.rs  fuzz.rs  golden.rs  rejection.rs
crates/coxswain-n2k/tests/common/: mod.rs
crates/coxswain-nmea0183/: Cargo.toml
crates/coxswain-nmea0183/src/: accumulator.rs  error.rs  fields.rs  lib.rs  quirks.rs  sentence.rs
crates/coxswain-nmea0183/tests/: fuzz.rs  golden.rs  incremental.rs  rejection.rs
crates/coxswain-replay/: Cargo.toml
crates/coxswain-replay/src/: base64.rs  convert.rs  error.rs  lib.rs  measurement_log.rs  raw_log.rs
crates/coxswain-replay/tests/: bridge.rs
crates/coxswain-sim/: Cargo.toml
crates/coxswain-sim/src/: lib.rs  rng.rs
crates/coxswain-sim/tests/: sim.rs
crates/coxswain-supervisor/: Cargo.toml
crates/coxswain-supervisor/src/: geofence.rs  lib.rs
crates/coxswain-supervisor/tests/: supervisor.rs
crates/coxswain-xprofile-check/: Cargo.toml
crates/coxswain-xprofile-check/src/: lib.rs
crates/coxswain-xprofile-check/tests/: xprofile.rs
crates/coxswain-xprofile-scenario/: Cargo.toml
crates/coxswain-xprofile-scenario/src/: lib.rs
crates/coxswain-xprofile-target/: Cargo.toml  build.rs  memory.x
diary/: 2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md
docs/: DECISIONS.md  TASKS.md  hardware.md  manifest-schema.md
