[workspace]
resolver = "3"
members = [
    "crates/coxswain-contract",
    "crates/coxswain-model",
    "crates/coxswain-estimator",
    "crates/coxswain-guidance",
    "crates/coxswain-supervisor",
    "crates/coxswain-manifest",
    "crates/coxswain-nmea0183",
    "crates/coxswain-crsf",
    "crates/coxswain-drivers",
    "crates/coxswain-sim",
    "crates/coxswain-keelson",
    "crates/coxswain-hosted",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
