[workspace]
resolver = "3"
members = [
    "crates/coxswain-contract",
    "crates/coxswain-model",
    "crates/coxswain-estimator",
    "crates/coxswain-guidance",
    "crates/coxswain-allocation",
    "crates/coxswain-supervisor",
    "crates/coxswain-manifest",
    "crates/coxswain-nmea0183",
    "crates/coxswain-crsf",
    "crates/coxswain-n2k",
    "crates/coxswain-cyphal",
    "crates/coxswain-drivers",
    "crates/coxswain-sim",
    "crates/coxswain-keelson",
    "crates/coxswain-hosted",
    "crates/coxswain-replay",
    "crates/coxswain-xprofile-scenario",
    "crates/coxswain-xprofile-check",
]

# crates/coxswain-xprofile-target is deliberately NOT a member: it is a
# thumbv7em-only #![no_main] binary (cortex-m-rt + semihosting) built by
# coxswain-xprofile-check's host test via an explicit `cargo build
# --manifest-path`, never by `cargo build/test --workspace`. Excluding it (a)
# keeps `cargo test --workspace` from ever trying to link an ARM-only binary
# for the host target, and (b) keeps cortex-m/cortex-m-rt/panic-semihosting
# out of the root Cargo.lock entirely.
exclude = ["crates/coxswain-xprofile-target"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
