[package]
name = "coxswain-drivers"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
coxswain-contract = { path = "../coxswain-contract" }
# Generic-protocol drivers (this crate) consume the parser crates; internal
# path dep, zero transitive cost (CLAUDE.md: interfaces are adapters).
coxswain-nmea0183 = { path = "../coxswain-nmea0183" }
coxswain-crsf = { path = "../coxswain-crsf" }
# The Cyphal actuator backend consumes the Cyphal/CAN transport codec.
coxswain-cyphal = { path = "../coxswain-cyphal" }
