[package]
name = "coxswain-estimator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
coxswain-contract = { path = "../coxswain-contract" }
# Process model and tangent frame; one model crate, two consumers (D-020).
coxswain-model = { path = "../coxswain-model" }
# Estimator math per CLAUDE.md conventions; no_std via the libm feature.
nalgebra = { version = "0.34", default-features = false, features = ["libm"] }
# no_std scalar trig for the tangent frame and process model.
libm = "0.2"

[dev-dependencies]
# serde feature so the replay harness can log measurements as JSONL.
coxswain-contract = { path = "../coxswain-contract", features = ["serde"] }
# The JSONL measurement-log format itself: promoted out of this harness once
# coxswain-hosted's field-data bridge became a second consumer (docs/
# TASKS.md Phase 2's own deferral). The harness keeps its trajectory
# generators and seeded RNG; only the log read/write moved.
coxswain-replay = { path = "../coxswain-replay" }
