[package]
name = "coxswain-hosted"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
coxswain-contract = { path = "../coxswain-contract" }
coxswain-estimator = { path = "../coxswain-estimator" }
coxswain-guidance = { path = "../coxswain-guidance" }
coxswain-supervisor = { path = "../coxswain-supervisor" }
# Control allocation (D-026): maps guidance's tau onto per-effector outputs
# from the manifest-declared effector table.
coxswain-allocation = { path = "../coxswain-allocation" }
# The binary boots from a compiled blob; default features are the no_std
# reader plus the hash, which is all it needs.
coxswain-manifest = { path = "../coxswain-manifest" }
# Keelson adapter at the process boundary (D-003, D-008).
coxswain-keelson = { path = "../coxswain-keelson" }
# This profile's I/O backend per TASKS Phase 5; real /dev ports (below) are
# Phase 6, and sim stays the default (D-020: a core artifact, not superseded).
coxswain-sim = { path = "../coxswain-sim" }
# GNSS-over-0183, RC, and actuator-serial drivers this profile wires to real
# ports (Phase 6: "coxswain-hosted on real /dev ports").
coxswain-drivers = { path = "../coxswain-drivers" }
# Byte-to-CRSF-frame assembly for the real RC port.
coxswain-crsf = { path = "../coxswain-crsf" }
# Only for the `Quirks` type `coxswain-drivers::gnss0183::Config` takes;
# already pulled in transitively via coxswain-drivers.
coxswain-nmea0183 = { path = "../coxswain-nmea0183" }
# --record-nmea's raw-log format (recorder.rs); the same JSONL format
# cxconvert reads, so today's capture is this evening's replay regression.
coxswain-replay = { path = "../coxswain-replay" }
# Session construction only; same 1.9 line the keelson crate pins.
zenoh = "1.9"
# Raw termios for real serial ports (serial.rs); already a transitive
# dependency via zenoh, promoted to direct since this crate now calls it.
libc = "0.2"

[dev-dependencies]
# Closed-loop scenario tests run the full loop against the simulator plant
# (D-020); LocalFrame from coxswain-model does the test geometry.
coxswain-model = { path = "../coxswain-model" }
# The integration tests compile the Seahorse manifest themselves.
coxswain-manifest = { path = "../coxswain-manifest", features = ["std"] }
